--- a/06_Dom/one.html
+++ b/06_Dom/one.html
@@ -11,9 +11,9 @@
         }
     </style>
 </head>
-<body>
-    <div class="bg-black">
-        <h1 class="heading"> DOM Learning on chai or code </h1>
+<body class="bg-black">
+    <div >
+        <h1 id="title" class="heading"> DOM Learning on chai or code </h1>
         <p>Lorem ipsum dolor sit amet.</p>
     </div>
 
