--- a/06_Dom/one.html
+++ b/06_Dom/one.html
@@ -5,7 +5,7 @@
     
     <title>DOM(Document Object Model) Learning</title>
     <style>
-        .bg_black{
+        .bg-black{
             background-color: #414141;
             color: aliceblue;
         }
@@ -13,9 +13,25 @@
 </head>
 <body class="bg-black">
     <div >
-        <h1 id="title" class="heading"> DOM Learning on chai or code </h1>
+        <h1 id="title" class="heading"> DOM Learning on chai or code <span style="display: none;"> test text</span></h1>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
+        <h2>Lorem ipsum dolor sit.</h2>
         <p>Lorem ipsum dolor sit amet.</p>
+        
+        <input type="password" name="" id="">
+
+        <ul>
+            <li class="list-item">one</li>
+            <li class="list-item">two</li>
+            <li class="list-item">three</li>
+            <li class="list-item">four</li>
+        </ul>
     </div>
 
 </body> 
 </html>
+
+<!-- 
+in querySelectorAll we get node list we can use foreach here
+but in getElementByClassName we get HtmlCollection which is diff so we convert it to array -->
